<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SignInActivity"
        android:background="@drawable/share_hut">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="100dp"
            android:layout_marginBottom="300dp"
            android:contentDescription="@string/sign_in_button"
            android:src="@drawable/sharehutlogo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/appinfo"
            android:textColor="@color/green_1"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="622dp"
            android:layout_height="723dp"
            android:layout_marginTop="41dp"
            android:contentDescription="@string/lowerpart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView4"
            app:srcCompat="@drawable/lowerpart" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/signInButton"
            android:layout_width="250dp"
            android:layout_height="80dp"
            android:background="@drawable/round_style"
            app:colorScheme="light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="360dp"
            android:layout_height="470dp"
            android:layout_marginStart="44dp"
            android:layout_marginBottom="52dp"
            android:contentDescription="@string/chaticon"
            app:layout_constraintBottom_toBottomOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:srcCompat="@drawable/chaticon" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="367dp"
            android:layout_height="619dp"
            android:layout_marginEnd="44dp"
            android:contentDescription="@string/chaticon2"
            app:layout_constraintBottom_toBottomOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:srcCompat="@drawable/chaticon2" />

        <Button
            android:id="@+id/button"
            android:background="@drawable/round_style"
            android:layout_width="250dp"
            android:layout_height="80dp"
            android:text="@string/facebook"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signInButton" />


</androidx.constraintlayout.widget.ConstraintLayout>